# bolo

./: .gitignore  .mcp.json  CLAUDE.md  Cargo.toml  README.md  deny.toml  install.sh
bolo-blobs/: Cargo.toml
bolo-blobs/src/: lib.rs  store.rs
bolo-blobs/tests/: transfer.rs
bolo-chat/: Cargo.toml
bolo-chat/src/: lib.rs  message.rs  store.rs
bolo-ci/: Cargo.toml
bolo-ci/src/: gossip.rs  lib.rs  runner.rs  store.rs  types.rs
bolo-cli/: Cargo.toml  build.rs
bolo-cli/src/: gc.rs  main.rs  quality.rs
bolo-cli/src/cmd/: blob.rs  chat.rs  ci.rs  daemon.rs  deploy.rs  doc.rs  git.rs  id.rs  mcp.rs  mesh.rs  mod.rs  peer.rs  pub_sub.rs  relay.rs  task.rs
bolo-cli/tests/: cli.rs  cross_node.rs
bolo-core/: Cargo.toml
bolo-core/src/: capabilities.rs  config.rs  crypto.rs  error.rs  identity.rs  ipc.rs  lib.rs  node.rs  peers.rs  state.rs  types.rs
bolo-docs/: Cargo.toml
bolo-docs/src/: lib.rs  store.rs  sync.rs
bolo-docs/tests/: sync.rs
bolo-git/: Cargo.toml
bolo-git/src/: bridge.rs  lib.rs  review.rs  types.rs
bolo-mcp/: Cargo.toml
bolo-mcp/src/: lib.rs  protocol.rs  server.rs  tools.rs
bolo-mcp/tests/: correspondence.rs
bolo-pub/: Cargo.toml
bolo-pub/src/: channel.rs  lib.rs
bolo-relay/: Cargo.toml
bolo-relay/src/: lib.rs
bolo-task/: Cargo.toml
bolo-task/src/: board.rs  lib.rs  store.rs  types.rs
bolo-types/: Cargo.toml
bolo-types/src/: lib.rs
tests/: two_node_sync.sh
