[package]
name = "bolo-blobs"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[package.metadata.cargo-machete]
ignored = ["blake3", "thiserror", "tracing"]

[dependencies]
bolo-core = { workspace = true }
iroh-blobs = { workspace = true }
blake3 = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
iroh = { workspace = true }
tokio = { workspace = true }
