[package]
name = "bolo-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "bolo"
path = "src/main.rs"

[package.metadata.cargo-machete]
ignored = ["bolo-relay", "tracing"]

[dependencies]
bolo-core = { workspace = true }
iroh = { workspace = true }
iroh-blobs = { workspace = true }
iroh-gossip = { workspace = true }
bytes = { workspace = true }
futures-lite = { workspace = true }
blake3 = { workspace = true }
bolo-blobs = { workspace = true }
bolo-chat = { workspace = true }
bolo-ci = { workspace = true }
bolo-docs = { workspace = true }
bolo-task = { workspace = true }
bolo-git = { workspace = true }
git2 = { workspace = true }
bolo-mcp = { workspace = true }
bolo-pub = { workspace = true }
bolo-relay = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
rand = { workspace = true }
flate2 = { workspace = true }
tar = { workspace = true }
tempfile = { workspace = true }
termimad = { workspace = true }


[dev-dependencies]
tempfile = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
bolo-core = { workspace = true }
git2 = { workspace = true }
libc = "0.2"
