[package]
name = "bolo-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[package.metadata.cargo-machete]
ignored = ["tracing", "tokio"]

[dependencies]
bolo-types = { workspace = true }
iroh = { workspace = true }
iroh-blobs = { workspace = true }
iroh-gossip = { workspace = true }
blake3 = { workspace = true }
chacha20poly1305 = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
dirs = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
sysinfo = { workspace = true }
tokio = { workspace = true }
