[package]
name = "bolo-git"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[package.metadata.cargo-machete]
ignored = ["serde_json", "thiserror", "tracing"]

[dependencies]
bolo-core = { workspace = true }
blake3 = { workspace = true }
git2 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
