[package]
name = "bolo-pub"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[package.metadata.cargo-machete]
ignored = ["iroh-gossip", "serde", "thiserror", "tracing"]

[dependencies]
bolo-core = { workspace = true }
iroh = { workspace = true }
iroh-gossip = { workspace = true }
bytes = "1"
serde = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
