[package]
name = "bolo-relay"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[package.metadata.cargo-machete]
ignored = ["iroh-relay", "thiserror", "tracing"]

[dependencies]
iroh-relay = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
