[package]
name = "bolo-task"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[package.metadata.cargo-machete]
ignored = ["tracing", "thiserror"]

[dependencies]
bolo-core = { workspace = true }
blake3 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
